[package]
name = "scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
cosmwasm-std = "1.5.2"
cw-orch = { version = "0.21.2", features = ["daemon"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
nft-loans-nc = { version = "0.4.0", path = "../contracts/nft-loan" }
raffles = { version = "0.4.0", path = "../contracts/raffles" }
sg721.workspace = true
sg721-base.workspace = true
utils = { version = "0.1.0", path = "../packages/utils" }
