[package]
name = "atlas-test-suite"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]


[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
default = ["sg"]
sg = ["sg-std", "sg721", "sg721-base"]
vanilla = []


[dependencies]
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }

anyhow = { workspace = true }
cosmwasm-schema = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
sg-multi-test = { workspace = true }
cw-multi-test = { workspace = true }
cw721 = { workspace = true }
vending-factory = { workspace = true }
vending-minter = { workspace = true }
sg2 = { workspace = true }
nois = { workspace = true }

sg721-base = { workspace = true, optional = true }
sg-std = { workspace = true, optional = true }
sg721 = { workspace = true, optional = true }
raffles = { path = "../contracts/raffles", features = [
    "library",
    "vanilla",
    "sg",
] }
nft-loans-nc = { path = "../contracts/nft-loan", features = ["vanilla", "sg"] }
utils = { path = "../packages/utils" }

#  For gating
dao-proposal-single = "2.3.0"
cw20 = "1.1.2"
dao-interface = "2.3.0"
dao-voting-cw20-staked = "2.3.0"
cw20-base = "1.1.2"
cw20-stake = "2.3.0"
dao-dao-core = "2.3.0"
cw-utils.workspace = true
dao-voting = "2.3.0"
dao-pre-propose-single = "2.3.0"
hex = "0.4.3"

[dev-dependencies]
rand = "0.8.5"
