[package]
name = "nft-loans-nc"
version = "0.4.0"
authors = ["A Hardnett | PermissionlessWeb"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
default = ["sg"]
sg = ["sg-std", "sg721", "sg721-base"]
vanilla = []
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std        = { workspace = true }
cosmwasm-schema     = { workspace = true }
cw-storage-plus     = { workspace = true }
cw2                 = { workspace = true }
cw721               = { workspace = true }
cw721-base          = { workspace = true }
nois                = { workspace = true }
schemars            = { workspace = true }
serde               = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror           = { workspace = true }

# Stargaze libs
sg-std              = { workspace = true , optional = true }
sg721               = { workspace = true , optional = true }
sg721-base          = {workspace = true , optional = true }

utils = { path = "../../packages/utils", version = "0.1.0"}
