[package]
name = "raffles"
version = "0.4.0"
authors = []
edition = "2021"
publish = false
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["sg"]
sg = ["sg-std", "sg721", "sg721-base"]
vanilla = []
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std          = { workspace = true, features = [
  "cosmwasm_1_4",
  # Enable this if you only deploy to chains that have CosmWasm 2.0 or higher
  # "cosmwasm_2_0",
] }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils = { workspace = true }
cw2 = { workspace = true }
cw721 = { workspace = true }
cw721-base = { workspace = true }
nois = { workspace = true }
serde = { workspace = true, default-features = false, features = ["derive"] }
thiserror = { workspace = true }
sha2 = { workspace = true , default-features = false }

# Stargaze libs
sg-std = { workspace = true, optional = true }
sg721  = { workspace = true, optional = true }
sg721-base = { workspace = true, optional = true }

utils = { path = "../../packages/utils", version = "0.1.0", feature = "vanilla" }
cw-orch = { workspace = true }
rand_xoshiro = { version = "0.6.0", default-features = false }
rand = { version = "0.8.4", default-features = false }
dao-interface = { workspace = true }
cw20 = { workspace = true }
cw20-base = { workspace = true }
